--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    Vuejs Restaurants Lite
   </title>
 </head>
 
-<body>
+<body class="dark:text-white dark:bg-gray-800">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
